--- a/theme.toml
+++ b/theme.toml
@@ -4,7 +4,7 @@
 name = "Dot-Org"
 license = "MIT"
 licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
-description = "This modern, accesible, performant theme is ideal for powering the website of small Organizations"
+description = "This modern, accesible, performant theme is ideal for powering the website of a small organization"
 homepage = "https://todogroup.org/"
 tags = []
 features = []
