W3c fixes, accessibility changes, Lighthouse checks
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/exampleSite/config/_default/params.yaml
+++ b/exampleSite/config/_default/params.yaml
@@ -20,10 +20,10 @@ social_links:
   discord: ""
   facebook: ""
   flickr: ""
-  github: ""
+  github: "https://github.com/cncf/dot-org-hugo-theme"
   instagram: ""
   landscape: ""
-  linkedin: ""
+  linkedin: "https://www.linkedin.com/company/cloud-native-computing-foundation"
   mastodon: ""
   rss: ""
   slack: ""
