Updating package.json to reflect directory reorganisation
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/exampleSite/package.json
+++ b/exampleSite/package.json
@@ -4,8 +4,8 @@
     "description": "",
     "main": "none.js",
     "scripts": {
-        "build": "hugo --theme=dot-org-hugo-theme --themesDir ../..",
-        "start": "hugo serve --logLevel info --configDir=config --buildDrafts --themesDir ../.. --buildFuture --ignoreCache --disableFastRender --gc  --printI18nWarnings --printMemoryUsage --printPathWarnings --printUnusedTemplates --templateMetrics --templateMetricsHints"
+        "build": "hugo --theme=dot-org-hugo-theme",
+        "start": "hugo serve --logLevel info --configDir=config --buildDrafts --buildFuture --ignoreCache --disableFastRender --gc  --printI18nWarnings --printMemoryUsage --printPathWarnings --printUnusedTemplates --templateMetrics --templateMetricsHints"
     },
     "repository": {
         "type": "git",
