--- a/netlify.toml
+++ b/netlify.toml
@@ -1,14 +1,11 @@
 [build]
 publish = "exampleSite/public"
-command = "cd exampleSite && hugo --themesDir=../.. --baseURL ${DEPLOY_PRIME_URL}"
+command = "cd exampleSite && npm install && hugo --environment=production --themesDir=../.. --baseURL ${DEPLOY_PRIME_URL}"
 
 [build.environment]
 NODE_VERSION = "18.14.0"
 HUGO_VERSION = "0.115.4"
 HUGO_THEME = "repo"
-
-[context.deploy-preview]
-command = "cd exampleSite && hugo --themesDir=../.. --buildFuture --buildDrafts --baseURL $DEPLOY_PRIME_URL"
 
 [[headers]]
   for = "/*"
