Adding front matter way to hide page title, Adding way to add custom head overwrite
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/exampleSite/package.json
+++ b/exampleSite/package.json
@@ -5,7 +5,8 @@
     "main": "none.js",
     "scripts": {
         "build": "hugo --theme=dot-org-hugo-theme",
-        "start": "hugo serve --logLevel info --configDir=config --buildDrafts --buildFuture --ignoreCache --disableFastRender --gc  --printI18nWarnings --printMemoryUsage --printPathWarnings --printUnusedTemplates --templateMetrics --templateMetricsHints"
+        "start": "hugo serve --logLevel info --configDir=config --buildDrafts --buildFuture --ignoreCache --disableFastRender --gc  --printI18nWarnings --printMemoryUsage --printPathWarnings --printUnusedTemplates --templateMetrics --templateMetricsHints",
+        "dev": "hugo serve --logLevel info --configDir=config --themesDir=../.. --buildDrafts --buildFuture --ignoreCache --disableFastRender --gc  --printI18nWarnings --printMemoryUsage --printPathWarnings --printUnusedTemplates --templateMetrics --templateMetricsHints"
     },
     "repository": {
         "type": "git",
