Various improvements after feedback round
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/exampleSite/config/_default/languages.yaml
+++ b/exampleSite/config/_default/languages.yaml
@@ -17,7 +17,7 @@ en:
       text: "Join us"
       link: "/example-page/"
     ### copyright (markdown can be used) ###
-    copyright: "Copyright &copy; {{< current_year >}} Company Name. All Rights Reserved."
+    copyright: "Copyright &copy; {{< current_year >}} Company Name. All Rights Reserved. [Dot Org Theme](https://github.com/cncf/dot-org-hugo-theme) for Hugo by [CNCF](https://www.cncf.io)."
     github_edit: "Edit this page on GitHub"
   ### example menu showing children ###
   menu:
