--- a/theme.toml
+++ b/theme.toml
@@ -2,8 +2,8 @@ name = "Dot-Org"
 license = "MIT"
 licenselink = "https://github.com/cncf/dot-org-hugo-theme/blob/main/LICENSE"
 description = "This modern, accesible, performant theme is ideal for powering the website of a small organization"
-homepage = "https://todogroup.org/"
-demosite = ""
+homepage = "https://dot-org-hugo-theme-demo.netlify.app/"
+demosite = "https://dot-org-hugo-theme-demo.netlify.app/"
 min_version = "0.110.0"
 theme_version = "0.1.0"
 
