Added Pinterest social share (#23)
Signed-off-by: Chris Abraham <cjyabraham@gmail.com>

--- a/exampleSite/config/_default/params.yaml
+++ b/exampleSite/config/_default/params.yaml
@@ -25,6 +25,7 @@ social_links:
   landscape: ""
   linkedin: "https://www.linkedin.com/company/cloud-native-computing-foundation"
   mastodon: ""
+  pinterest: ""
   rss: ""
   slack: ""
   stackoverflow: ""
