--- a/exampleSite/config/production/hugo.yaml
+++ b/exampleSite/config/production/hugo.yaml
@@ -1,6 +1,6 @@
 ######################## production configuration ####################
 # The base URL of your site (required). This will be prepended to all relative URLs.
-baseURL: https://dot-org-hugo-theme-demo.netlify.app/
+baseURL:
 googleAnalytics:
 enableRobotsTXT: true
 build:
