#40 Moving description in to language params
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/exampleSite/config/_default/languages.yaml
+++ b/exampleSite/config/_default/languages.yaml
@@ -4,8 +4,8 @@ en:
   ### copyright (markdown can be used) ###
   copyright: "Copyright &copy; {{< current_year >}} Company Name. All Rights Reserved. [Dot Org Theme](https://github.com/cncf/dot-org-hugo-theme) for Hugo by [CNCF](https://www.cncf.io)."
   title: "Site Title"
-  description: "Site Description"
   params:
+    description: "Site Description"
     ### accessibility ###
     accessibility:
       skip_text: "Skip to content"
@@ -83,7 +83,8 @@ es:
   contentDir: content/es
   weight: 2
   title: "Título del Sitio"
-  description: "Descripción del Sitio"
+  params:
+    description: "Descripción del Sitio"
   menu:
     main:
     - identifier: "about"
