Adds people listing with map
Signed-off-by: Chris Abraham <cjyabraham@gmail.com>

--- a/exampleSite/config/_default/languages.yaml
+++ b/exampleSite/config/_default/languages.yaml
@@ -39,8 +39,8 @@ en:
       post: "Aenean commodo ligula get dolor. Aenean massa."
       parent: "about"
     - identifier: "child-3"
-      name: "Example Child Page"
-      url: "/example-page/"
+      name: "People Map"
+      url: "/people-map/"
       weight: 3
       post: "Nulla consequat massa quis enim. Donec pede justo."
       parent: "about"
