Adds an external link icon beside external links (#54)
* Adds an external link icon beside links that take the user off-site (#53)

Signed-off-by: Chris Abraham <cjyabraham@gmail.com>

* #53 Rearrange example as its not the most important element of the menu

Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

---------

Signed-off-by: Chris Abraham <cjyabraham@gmail.com>
Signed-off-by: James Hunt <10615884+thetwopct@users.noreply.github.com>
Co-authored-by: James Hunt <10615884+thetwopct@users.noreply.github.com>

--- a/exampleSite/config/_default/languages.yaml
+++ b/exampleSite/config/_default/languages.yaml
@@ -30,7 +30,7 @@ en:
       name: "Example Child Page"
       url: "/example-page/"
       weight: 1
-      post: "Lorem ipsum dolor sit amet consectetuer adipiscing elit aenean commodo."
+      post: "Nulla consequat massa quis enim. Donec pede justo."
       parent: "about"
     - identifier: "child-2"
       name: "Example Child Page"
@@ -39,44 +39,26 @@ en:
       post: "Aenean commodo ligula get dolor. Aenean massa."
       parent: "about"
     - identifier: "child-3"
-      name: "Example Child Page"
-      url: "/example-page/"
+      name: "Example External page"
+      url: "https://cncf.io?ref=dot-org"
       weight: 3
-      post: "Nulla consequat massa quis enim. Donec pede justo."
-      parent: "about"
-    - identifier: "example"
-      name: "Example"
-      url: "/example-page/"
-      weight: 2
-    - identifier: "example-1"
-      name: "Example Child Page"
-      url: "/example-page/"
-      weight: 1
       post: "Lorem ipsum dolor sit amet consectetuer adipiscing elit aenean commodo."
-      parent: "example"
-    - identifier: "example-2"
-      name: "Example Child Page"
-      url: "/example-page/"
-      weight: 2
-      post: "Nulla consequat massa quis enim. Donec pede justo."
-      parent: "example"
-    - identifier: "example-3"
-      name: "Example Child Page"
-      url: "/example-page/"
-      weight: 3
-      post: "Aenean commodo ligula get dolor. Aenean massa. "
-      parent: "example"
+      parent: "about"
     - identifier: "demo-page"
       name: "Demo Page"
       url: "/demo-page/"
-      weight: 3
+      weight: 2
     - identifier: "faq"
       name: "FAQs"
       url: "/faq/"
-      weight: 4
+      weight: 3
     - identifier: "blog"
       name: "Blog"
       url: "/blog/"
+      weight: 4
+    - identifier: "example"
+      name: "External"
+      url: "https://cncf.io?ref=dot-org"
       weight: 5
 es:
   languageName: Spanish
