Remove post summaries and set max length
Signed-off-by: Andrew Aiken <andrew.aiken@machinemetrics.com>

--- a/exampleSite/config/_default/hugo.yaml
+++ b/exampleSite/config/_default/hugo.yaml
@@ -5,6 +5,8 @@ theme: "dot-org-hugo-theme"
 title: "Dot Org Theme Demo"
 # Default time zone for time stamps; use any valid tz database name: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
 timeZone: "America/Los_Angeles"
+# Defines the minimum amount of words to reddened in a summary
+summaryLength: 50
 
 ######################## i18n ####################
 # Auto-detect Chinese/Japanese/Korean Languages in the content. see: https://gohugo.io/getting-started/configuration/#hascjklanguage
