--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,17 @@
 [build]
 publish = "exampleSite/public"
-command = "cd exampleSite && npm install && hugo --environment=production --themesDir=../.. --baseURL ${DEPLOY_PRIME_URL}  && npx -y pagefind --site public"
+command = """\
+  curl -LJO https://github.com/sass/dart-sass/releases/download/${DART_SASS_VERSION}/dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz && \
+  tar -xf dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz && \
+  rm dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz && \
+  export PATH=/opt/build/repo/dart-sass:$PATH && \
+  cd exampleSite && npm install && hugo --environment=production --themesDir=../.. --baseURL ${DEPLOY_PRIME_URL}  && npx -y pagefind --site public"
+  """
 
 [build.environment]
 NODE_VERSION = "23.7.0"
-HUGO_VERSION = "0.143.1"
+HUGO_VERSION = "0.148.0"
+DART_SASS_VERSION = "1.89.2"
 HUGO_THEME = "repo"
 
 [[headers]]
