--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,10 @@
 [build]
 publish = "exampleSite/public"
-command = "cd exampleSite && npm install && hugo --environment=production --themesDir=../.. --baseURL ${DEPLOY_PRIME_URL}  && npx -y pagefind --site public"
+command = "cd exampleSite && npm install && npm run build:production --url=${DEPLOY_PRIME_URL} && npx -y pagefind --site public"
 
 [build.environment]
 NODE_VERSION = "23.7.0"
-HUGO_VERSION = "0.143.1"
+HUGO_VERSION = "0.148.1"
 HUGO_THEME = "repo"
 
 [[headers]]
